--- a/templates/no_recipes_found.html
+++ b/templates/no_recipes_found.html
@@ -44,7 +44,7 @@
         {% endif %}
         
         <p>Don't forget to press enter after each ingredient!</p>
-        <a href="\custom" class="button">Try Again</a>
+        <a href="\custom" class="button">Search by Ingredients</a>
     </div>
 </body>
 </html>
