--- a/templates/random.html
+++ b/templates/random.html
@@ -28,7 +28,7 @@
     <label for="num_recipes">How many recipes?</label>
     <input type="text" id="num_recipes" name="num_recipes" placeholder="Enter a number" required>
     {% if last_search %}
-        <p id="search_error_message">You entered an invalid number of recipes: "{{ last_search }}". Please enter a number between 1 and 13493.</p>
+        <p class="error_message">You entered an invalid number of recipes: "{{ last_search }}". Please enter a number between 1 and 13493.</p>
     {% endif %}
     <input type="submit" name="submit" value="Generate">
   </form>
