--- a/templates/recipe_not_found_error.html
+++ b/templates/recipe_not_found_error.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="\">Home</a></li>
                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
-                <li><a href="\custom">Search by Ingredients</a></li>
+                <li><a href="\ingredient_search">Search by Ingredients</a></li>
                 <li><a href="\random">Random Recipes</a></li>
                 <li><a href="\all_recipes">All Recipes</a></li>
             </ul>
