--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
         <a href="\" class="button">Home</a>
         <a href="\random" class="button">Generate Random Recipe</a>
         <a href="\search_by_title" class="button">Search by Title</a>
-        <a href="\custom" class="button">Search by Ingredients</a>
+        <a href="\ingredient_search" class="button">Search by Ingredients</a>
     </div>
 </body>
 </html>
