--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="\">Home</a></li>
                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
-                <li><a href="\custom">Search by Ingredients</a></li>
+                <li><a href="\ingredient_search">Search by Ingredients</a></li>
                 <li><a href="\random">Random Recipes</a></li>
                 <li><a class="{{highlight}}" href="\all_recipes">All Recipes</a></li>
             </ul>
@@ -41,6 +41,7 @@
             </p>
             {% endif %}
             {% if excluded_ingredients %}
+            <h3>Excluded Ingredients:</h3>
             <ul class="ingredient-list">
                     {% for ingredient in excluded_ingredients %}
                     <li>{{ ingredient }}</li>
