--- a/templates/custom_recipes_results.html
+++ b/templates/custom_recipes_results.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="\">Home</a></li>
                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
-                <li><a class="highlight" href="\custom">Search by Ingredients</a></li>
+                <li><a class="highlight" href="\ingredient_search">Search by Ingredients</a></li>
                 <li><a href="\random">Random Recipes</a></li>
                 <li><a href="\all_recipes">All Recipes</a></li>
             </ul>
@@ -49,8 +49,7 @@
             {% endif %}
         </div>
      </div>
-    <a href="{{ url_for('custom_search') }}" class="button">New Ingredient Search</a>
-    <br><br>
+    <br>
 
 
      <div class="alphabet_links">
@@ -80,7 +79,7 @@
     </div>
     {% else %}
     <p class="error_message">No recipes match your search criteria. Click below to search again.</p>
-    <a href="{{ url_for('custom_search') }}" class="button">Search by Ingredients</a>
+    <a href="{{ url_for('ingredient_search') }}" class="button">Search by Ingredients</a>
     {% endif %}
      
 </body>
