adding one more button to 404

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,9 +11,10 @@
         <p>Oops! That page doesn't exist.</p>
         <p>Maybe try one of these instead:</p>
         <a href="\" class="button">Home</a>
-        <a href="\random" class="button">Generate Random Recipe</a>
         <a href="\search_by_title" class="button">Search by Title</a>
         <a href="\ingredient_search" class="button">Search by Ingredients</a>
+        <a href="\random" class="button">Generate Random Recipe</a>
+        <a href="\all_recipes" class="button">All Recipes</a>
     </div>
 </body>
 </html>
